--- a/thirdapp/src/App.css
+++ b/thirdapp/src/App.css
@@ -60,3 +60,38 @@
   position: absolute;
   right: 10px;
 }
+
+.modalOverlay{
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none;
+}
+
+.showmodalOverlay{
+  display: block;
+}
+
+.modelDiv{
+  width: 400px;
+  height: 400px;
+  position: fixed;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  top:-500%;
+  background-color: white;
+}
+
+.showmodelDiv{
+  top:50%;
+  transition: 0.3s;
+}
+
+.en{
+  position: fixed;
+  right: -30px;
+  transform: rotate(90deg);
+  top: 30%;
+}
+
