--- a/todolist/src/App.css
+++ b/todolist/src/App.css
@@ -13,17 +13,6 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
 .App-link {
   color: #61dafb;
 }
@@ -35,4 +24,52 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+form{
+  width: 1170px;
+  margin: auto;
+  display: flex;
+  gap: 20px;
+}
+
+form input{
+  height: 40px;
+  flex-basis: 80%;
+}
+
+form button{
+  flex-basis: 20%;
+}
+
+.outerDiv{
+  margin: auto;
+  width: 1170px;
+}
+.outerDiv ul{
+  margin-top: 30px;
+  padding: 0px;
+  list-style: none;
+}
+
+.outerDiv ul li{
+  color: white;
+  background-color: black;
+  margin-bottom: 20px;
+  padding: 10px;
+  text-align: left;
+  font-size: 25px;
+  position: relative;
+}
+
+.outerDiv ul li span{
+  position: absolute;
+  cursor: pointer;
+  right: 20px;
+}
+
+.statusCheck{
+  color: red !important;
+  background-color: yellow !important;
+  text-decoration: line-through;
 }
