--- a/todolist/src/App.css
+++ b/todolist/src/App.css
@@ -73,3 +73,30 @@ form button{
   background-color: yellow !important;
   text-decoration: line-through;
 }
+
+.tabsOuter{
+  width: 1176px;
+  margin: auto;
+}
+
+.tabsOuter ul{
+  margin: 0px;
+  padding: 0px;
+  list-style: none;
+  gap: 10px;
+  display: flex;
+}
+
+.tabsOuter ul li button{
+  background-color: #e4e4e4;
+  border: none;
+  color: #343a40;
+  padding: 0.5rem 20px;
+  margin-right: 18px;
+  font-weight: 600;
+}
+
+.activeButton{
+  color: white !important;
+  background-color: rgb(18, 18, 196) !important;
+}
